set body to always show scrollbar to prevent layout jump when pages change

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,7 @@
+body {
+    overflow-y: scroll;
+}
+
 form {
     display: flex;
     flex-direction: column;
